[package]
name = "lsp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ant_type_checker = { git = "https://github.com/ant-pl/TypedAnt.git", package = "type_checker" }
ant_ast = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ast" }
ant_parser = { git = "https://github.com/ant-pl/TypedAnt.git", package = "parser" }
ant_lexer = { git = "https://github.com/ant-pl/TypedAnt.git", package = "lexer" }
ant_token = { git = "https://github.com/ant-pl/TypedAnt.git", package = "token" }