[package]
name = "lsp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ant_id = { git = "https://github.com/ant-pl/TypedAnt.git", package = "id" }
ant_typed_ast = { git = "https://github.com/ant-pl/TypedAnt.git", package = "typed_ast" }
ant_typed_module = { git = "https://github.com/ant-pl/TypedAnt.git", package = "typed_module" }
ant_ty = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ty" }
ant_crate_def = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ant_crate_def" }
ant_name_resolver = { git = "https://github.com/ant-pl/TypedAnt.git", package = "name_resolver" }
ant_type_checker = { git = "https://github.com/ant-pl/TypedAnt.git", package = "type_checker" }
ant_ast = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ast" }
ant_parser = { git = "https://github.com/ant-pl/TypedAnt.git", package = "parser" }
ant_lexer = { git = "https://github.com/ant-pl/TypedAnt.git", package = "lexer" }
ant_token = { git = "https://github.com/ant-pl/TypedAnt.git", package = "token" }